--- a/algorithm/sorting.ipynb
+++ b/algorithm/sorting.ipynb
@@ -264,10 +264,10 @@
     "    print(array)\n",
     "    for i in range(len(array)):\n",
     "        # 배열의 총 크기에서 i의 값과 1을 뺀 만큼 반복\n",
-    "        for j in range(0, len(array) - i - 1):\n",
+    "        for j in range(0, len(array)-i-1):\n",
     "            # 만약 현재 인덱스의 값이 다음 인덱스의 값보다 클 경우, 두 값 swap\n",
-    "            if array[j + 1] < array[j]:\n",
-    "                array[j + 1], array[j] = array[j], array[j + 1]\n",
+    "            if array[j+1] < array[j]:\n",
+    "                array[j+1], array[j] = array[j], array[j+1]\n",
     "                print(array)\n",
     "        print(array)\n",
     "    return array"
