--- a/algorithm/sorting.ipynb
+++ b/algorithm/sorting.ipynb
@@ -319,11 +319,93 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K번째 수 (Lv.1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(array, commands):\n",
+    "    answer = []\n",
+    "    \n",
+    "    for i, j, k in commands:\n",
+    "        # step 1. 배열의 i번째(i-1 인덱스) 데이터부터 j번째(j-1 인덱스) 데이터까지 슬라이싱 후 정렬\n",
+    "        # step 2. 정렬한 배열의 k번째(k-1 인덱스) 데이터를 리스트에 append\n",
+    "        arr = sorted(array[i-1:j])[k-1]\n",
+    "        answer.append(arr)\n",
+    "        \n",
+    "    return answer"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 가장 큰 수 (Lv.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['6', '10', '2']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(numbers):\n",
+    "    # 리스트 안의 숫자들을 문자열로 형 변환하여 저장\n",
+    "    numbers = list(map(str, numbers))\n",
+    "\n",
+    "    # 최대 양의 정수가 1000이므로 같은 문자열을 3번 출력하여 문자열의 사전 순서를 key 값으로 받아 정렬\n",
+    "    numbers.sort(key=lambda x: x*3, reverse=True)\n",
+    "\n",
+    "    # step 1. 위의 규칙에 따라 정렬된 문자열 join\n",
+    "    # step 2. 모든 값이 0일 때 문자열 그대로가 아닌 정수로 나오기 위해 int형으로 변환(ex. [0, 0, 0] -> \"000\" -> 0)\n",
+    "    # step 3. 다시 문자열로 형 변환\n",
+    "    return str(int(''.join(numbers)))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### H-Index (Lv.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(citations):\n",
+    "    h_index = 0\n",
+    "    citations.sort(reverse=True)\n",
+    "    for i in range(len(citations)):\n",
+    "        if citations[i] >= i+1:\n",
+    "            h_index += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    return h_index"
+   ]
   }
  ],
  "metadata": {
