--- a/algorithm/sorting.ipynb
+++ b/algorithm/sorting.ipynb
@@ -319,6 +319,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp1 = [[0] * 4] * 4   # 같은 배열이 4번 복제\n",
+    "temp1[1][1] = 5         # 1행 1열이 5인 배열이 4번 나타남"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 5, 0, 0], [0, 5, 0, 0], [0, 5, 0, 0], [0, 5, 0, 0]]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp2 = [[0]*4 for _ in range(4)]   # [0, 0, 0, 0]인 배열이 4번 생성\n",
+    "temp2[1][1] = 5                     # 전체 배열의 1행 1열 값이 5로 변경"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0, 0, 0], [0, 5, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp2"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -340,7 +400,37 @@
     "        # step 2. 정렬한 배열의 k번째(k-1 인덱스) 데이터를 리스트에 append\n",
     "        arr = sorted(array[i-1:j])[k-1]\n",
     "        answer.append(arr)\n",
-    "        \n",
+    "\n",
+    "        # 한 줄 코딩\n",
+    "        # 1. list comprehension - return [sorted(array[i-1:j])[k-1] for i, j, k in commands]\n",
+    "        # 2. map, lambda - return list(map(lambda x: sorted(array[x[0]-1:x[1]])[x[2]-1], commands))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(array, commands):\n",
+    "    answer = []\n",
+    "\n",
+    "    # command가 여러 번 들어온다.\n",
+    "    for command in commands:\n",
+    "        # command -> i, j, k (리스트 unpacking)\n",
+    "        i, j, k = command\n",
+    "    \n",
+    "    # unpacking\n",
+    "    # for i, j, k in commands:\n",
+    "\n",
+    "    # 요구하는 로직\n",
+    "    # 1. array의 1번째부터 3번째까지 슬라이싱\n",
+    "        temp = array[i-1:j]\n",
+    "    # 2. 1에서 나온 배열을 정렬\n",
+    "        temp.sort()\n",
+    "    # 3. 2에서 나온 배열의 k번째 숫자\n",
+    "        answer.append(temp[k-1])\n",
     "    return answer"
    ]
   },
@@ -398,13 +488,35 @@
    "source": [
     "def solution(citations):\n",
     "    h_index = 0\n",
+    "    # 인용 횟수 내림차순으로 정렬\n",
     "    citations.sort(reverse=True)\n",
     "    for i in range(len(citations)):\n",
+    "\n",
+    "        # 인용 횟수가 논문 순번보다 크다면 h-index + 1\n",
     "        if citations[i] >= i+1:\n",
     "            h_index += 1\n",
+    "            \n",
+    "        # 인용 횟수가 논문 순번보다 작아지면 반복문 stop \n",
     "        else:\n",
     "            break\n",
     "    return h_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 다른 풀이\n",
+    "def solution(citations):\n",
+    "    citations.sort(reverse=True)\n",
+    "    for idx, citation in enumerate(citations):\n",
+    "        if idx >= citation:\n",
+    "            return idx\n",
+    "        \n",
+    "    # 모든 인용 횟수가 논문 순번보다 크다면 논문 수 출력\n",
+    "    return len(citations)"
    ]
   }
  ],
