--- a/algorithm/DFSBFS.ipynb
+++ b/algorithm/DFSBFS.ipynb
@@ -13,6 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 1) DFS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 예제: 음료수 얼려먹기"
    ]
   },
@@ -645,6 +653,173 @@
     "\n",
     "print(result) # 정답 출력"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2) BFS"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### * queue vs stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([1, 2, 3])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "queue = deque()\n",
+    "queue.append(1)\n",
+    "queue.append(2)\n",
+    "queue.append(3)\n",
+    "queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([2, 3])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queue.popleft()\n",
+    "queue"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pop(0)이 아닌 popleft()를 사용하는 이유\n",
+    "* pop(0)의 경우 리스트(스택)의 끝에서부터 맨 앞까지 리스트(스택)의 길이인 N만큼 시간 소요\n",
+    "* popleft()의 경우 처음부터 큐의 맨 앞에서 빼기 때문에 1만큼 시간 소요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 queue: deque([(0, 0)])\n",
+      "현재 queue: deque([(1, 0), (0, 1)])\n",
+      "현재 queue: deque([(0, 1), (1, 1)])\n",
+      "현재 queue: deque([(1, 1), (1, 1)])\n",
+      "현재 queue: deque([(1, 1), (1, 2)])\n",
+      "현재 queue: deque([(1, 2)])\n",
+      "현재 위치: [0, 0]\n",
+      "[1, 1, 0, 0, 0]\n",
+      "[1, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "현재 queue: deque([(0, 4)])\n",
+      "현재 위치: [0, 4]\n",
+      "[1, 1, 0, 0, 1]\n",
+      "[1, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "현재 queue: deque([(3, 0)])\n",
+      "현재 queue: deque([(3, 1)])\n",
+      "현재 queue: deque([(3, 2)])\n",
+      "현재 queue: deque([(3, 3)])\n",
+      "현재 queue: deque([(3, 4)])\n",
+      "현재 위치: [3, 0]\n",
+      "[1, 1, 0, 0, 1]\n",
+      "[1, 1, 1, 0, 0]\n",
+      "[0, 0, 0, 0, 0]\n",
+      "[1, 1, 1, 1, 1]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_text = \"\"\"4 5\n",
+    "00110\n",
+    "00011\n",
+    "11111\n",
+    "00000\"\"\"\n",
+    "\n",
+    "input_list = input_text.split(\"\\n\")\n",
+    "N, M = map(int, input_text.split(\"\\n\")[0].split())\n",
+    "\n",
+    "# 얼음틀 정보 리스트에 저장하기\n",
+    "ice_map = []\n",
+    "for i in range(N):\n",
+    "    ice_map.append(list(map(int, input_list[i+1])))\n",
+    "\n",
+    "def bfs(queue):\n",
+    "    while queue:\n",
+    "        print(f\"현재 queue: {queue}\")\n",
+    "        pos = queue.popleft()\n",
+    "        i, j = pos\n",
+    " \n",
+    "        if ice_map[i][j] == 0 and visited[i][j] == 0:\n",
+    "            visited[i][j] = 1\n",
+    "\n",
+    "            move_dirs = [(-1, 0), (1, 0), (0, -1), (0, 1)]  # 상, 하, 좌, 우\n",
+    "            for move_dir in move_dirs:\n",
+    "                next_pos = i + move_dir[0], j + move_dir[1]\n",
+    "\n",
+    "                if -1 < next_pos[0] < N and -1 < next_pos[1] < M and \\\n",
+    "                visited[next_pos[0]][next_pos[1]] == 0 and ice_map[next_pos[0]][next_pos[1]] == 0:\n",
+    "                    queue.append(next_pos)\n",
+    "\n",
+    "visited = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "answer = 0\n",
+    "for i in range(N): \n",
+    "    for j in range(M):\n",
+    "        if visited[i][j] == 0 and ice_map[i][j] == 0:\n",
+    "            queue = deque([(i, j)])\n",
+    "            bfs(queue)\n",
+    "            print('현재 위치:', str([i, j]))\n",
+    "            [print(ice) for ice in visited]\n",
+    "            answer += 1\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
