코딩테스트 연습

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -119,6 +119,248 @@
     "    \n",
     "    return answer"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K의 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(i, j, k):\n",
+    "    answer = 0\n",
+    "    for number in range(i, j+1):\n",
+    "\n",
+    "        # number를 10으로 나눈 몫이 0이 아닐 때까지,\n",
+    "        while number//10:\n",
+    "\n",
+    "            # 10으로 나눈 나머지가 k이면, answer += 1\n",
+    "            if number % 10 == k:\n",
+    "                answer += 1\n",
+    "            number //= 10\n",
+    "        if number % 10 == k:\n",
+    "            answer += 1\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# str 자료형의 특성 활용\n",
+    "\n",
+    "def solution(i, j, k):\n",
+    "    return ''.join(map(str, range(i, j+1))).count(str(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(1, 13, 1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### * 참 / 거짓 판별"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "if < >:\n",
+    "    print(\"참\")\n",
+    "else:\n",
+    "    print(\"거짓\")\n",
+    "````\n",
+    "\n",
+    "1) 수\n",
+    "- 0이 아닌 모든 수(정수, 실수, ...)는 True, 0일 때 False\n",
+    "\n",
+    "2) 리스트, 집합\n",
+    "- 리스트 or 집합이 비어있지 않으면 True, 비어있으면 False"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 할인 행사"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "want = [\"banana\", \"apple\", \"rice\", \"pork\", \"pot\"]\n",
+    "number = [3, 2, 2, 2, 1]\n",
+    "discount = [\"chicken\", \"apple\", \"apple\", \"banana\", \"rice\", \"apple\", \"pork\", \"banana\", \"pork\", \"rice\", \"pot\", \"banana\", \"apple\", \"banana\"]\t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(want, number, discount):    \n",
+    "    answer = 0\n",
+    "    # 10일 동안 회원 자격 부여\n",
+    "    # 할인하는 제품은 하루에 하나씩만 구매 가능\n",
+    "    \n",
+    "    for i in range(len(discount) - 9):\n",
+    "        items = discount[i:i+10]    # 10일 동안 살 수 있는 품목들\n",
+    "        \n",
+    "        for j in range(len(want)):\n",
+    "            want[j]     # 구매 희망 상품\n",
+    "            number[j]   # 구매 희망 개수\n",
+    "            \n",
+    "            # 10일 동안 살 수 있는 할인 품목들 개수와 구매 희망 개수가 다르면 break\n",
+    "            if items.count(want[j]) != number[j]:\n",
+    "                break\n",
+    "                \n",
+    "        # 반복문이 정상적으로 다 돌았으면,\n",
+    "        else:\n",
+    "            answer += 1\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list(구매 희망 품목 * 구매 희망 개수) == list(10일동안 살 수 있는 품목) check\n",
+    "def solution(want, number, discount):    \n",
+    "    answer = 0\n",
+    "    # 10일 동안 회원 자격 부여\n",
+    "    # 할인하는 제품은 하루에 하나씩만 구매 가능\n",
+    "    want_products = []\n",
+    "\n",
+    "    for i in range(len(want)):\n",
+    "        want_products += [want[i]] * number[i]  # 구매 희망 상품을 구매 희망 개수만큼 요소로 만들어 리스트에 추가\n",
+    "    want_products.sort()\n",
+    "\n",
+    "    for i in range(len(discount) - 9):\n",
+    "        items = discount[i:i+10]    # 10일 동안 살 수 있는 품목들\n",
+    "        items.sort()\n",
+    "        if want_products == items:\n",
+    "            answer += 1\n",
+    "\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(want, number, discount):    \n",
+    "    answer = 0\n",
+    "    # 10일 동안 회원 자격 부여\n",
+    "    # 할인하는 제품은 하루에 하나씩만 구매 가능\n",
+    "    shopping_cart = [0 for _ in want]\n",
+    "    for product in discount[:10]:\n",
+    "        if product in want: # 있는지 없는지 check\n",
+    "            idx = want.index(product)\n",
+    "            shopping_cart[idx] += 1\n",
+    "\n",
+    "    if shopping_cart == number:\n",
+    "        answer += 1\n",
+    "\n",
+    "    for i in range(1, len(discount) - 9):\n",
+    "        if discount[i-1] in want:       # 쇼핑카트에서 제외\n",
+    "            idx = want.index(discount[i-1])\n",
+    "            shopping_cart[idx] -= 1     \n",
+    "        \n",
+    "        if discount[i+9] in want:       # 쇼핑카트에 추가\n",
+    "            idx = want.index(discount[i+9])\n",
+    "            shopping_cart[idx] += 1\n",
+    "\n",
+    "        if shopping_cart == number:\n",
+    "            answer += 1\n",
+    "            \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dict 자료형 -> Counter 사용\n",
+    "from collections import Counter\n",
+    "\n",
+    "def solution(want, number, discount):    \n",
+    "    wishlist = Counter(dict(zip(want, number)))\n",
+    "    answer = 0\n",
+    "    \n",
+    "    for i in range(len(discount)-9):\n",
+    "        if wishlist == Counter(discount[i:i+10]):\n",
+    "            answer += 1\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution(want, number, discount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -128,7 +370,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4
