--- a/crawling_practice.ipynb
+++ b/crawling_practice.ipynb
@@ -8120,14 +8120,14 @@
     "# 2. try-except\n",
     "result = []\n",
     "for tr_tag in tr_tags[2:]:\n",
-    "    try:\n",
+    "    try:    # 태그 탐색이 가능하면,\n",
     "        # print(tr_tag.select_one('.tltle').text.strip())\n",
     "        tmp = {\n",
     "            '종목명': tr_tag.select_one('.tltle').text.strip(),\n",
     "            '현재가': tr_tag.select_one('.number').text.strip(),\n",
     "        }\n",
     "        result.append(tmp)\n",
-    "    except:\n",
+    "    except: # 그렇지 않으면,\n",
     "        pass\n",
     "\n",
     "# 3. if-else\n",
@@ -12352,7 +12352,7 @@
     "tops = []\n",
     "for i in range(1, 11):\n",
     "    url = f\"https://www.musinsa.com/categories/item/001?d_cat_cd=001&brand=&list_kind=small&sort=pop_category&sub_sort=&page={i}\"\n",
-    "    print(url)\n",
+    "    # print(url)\n",
     "    response = requests.get(url)\n",
     "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "\n",
