동적 크롤링 연습

--- a/crawling_practice.ipynb
+++ b/crawling_practice.ipynb
@@ -17396,8 +17396,8 @@
     "\n",
     "page = 1\n",
     "\n",
-    "before_news = []\n",
-    "result = []\n",
+    "before_news = []    # n - 1 페이지까지의 뉴스 항목\n",
+    "result = []         # 최종 뉴스 항목\n",
     "while True:\n",
     "    # print(page)\n",
     "    response = requests.get(url.format('20230713', page), headers=headers)\n",
@@ -17406,11 +17406,11 @@
     "\n",
     "    page += 1\n",
     "\n",
-    "    if before_news == news:\n",
+    "    if before_news == news:         # n - 1 페이지까지의 뉴스 항목과 n 페이지까지의 뉴스 항목이 같다면, (즉, n - 1 페이지가 가장 마지막 페이지)\n",
     "        break\n",
     "    else:\n",
-    "        before_news = news          # before_news 최신화\n",
-    "        result.extend(before_news)\n",
+    "        before_news = news          # n 페이지로 최신화\n",
+    "        result.extend(before_news)  # 최종 뉴스 항목에 이어 붙임\n",
     "\n",
     "result"
    ]
