--- a/RPA_project.ipynb
+++ b/RPA_project.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "[125 rows x 9 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,18 +378,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 시장 가치 데이터 변환\n",
-    "df['Market Value'] = df['Market Value'].apply(lambda x: re.search('[0-9\\.]{1,}[mk]', x).group() if re.search('[0-9\\.]{1,}[mk]', x) else 'unknown' if x == '?' else 0)\n",
-    "df['Market Value'] = df['Market Value'].apply(lambda x: float(str(x)[:-1])*10e6 if str(x)[-1] == 'm' else float(str(x)[:-1])*10e3 if str(x)[-1] == 'k' else 'unknown' if str(x) == 'unknown' else 0)"
+    "df['Market Value'] = df['Market Value'].apply(lambda x: re.search('[0-9\\.]{1,}[mk]', x).group())\n",
+    "df['Market Value'] = df['Market Value'].apply(lambda x: float(str(x)[:-1])*10e6 if str(x)[-1] == 'm' else float(str(x)[:-1])*10e3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
        "[114 rows x 10 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
