RPA_project updated

--- a/RPA_project.ipynb
+++ b/RPA_project.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +316,7 @@
        "[125 rows x 9 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,18 +379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 시장 가치 데이터 변환\n",
     "df['Market Value'] = df['Market Value'].apply(lambda x: re.search('[0-9\\.]{1,}[mk]', x).group())\n",
-    "df['Market Value'] = df['Market Value'].apply(lambda x: float(str(x)[:-1])*10e6 if str(x)[-1] == 'm' else float(str(x)[:-1])*10e3)"
+    "df['Market Value'] = df['Market Value'].apply(lambda x: int(float(str(x)[:-1])*10e6) if str(x)[-1] == 'm' else int(float(str(x)[:-1])*10e3))\n",
+    "df['Market Value'] = df['Market Value'].apply(lambda x: format(x, ',d'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,18 +401,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 비용 데이터 변환\n",
     "df['Fee'] = df['Fee'].apply(lambda x: re.search('[0-9\\.]{1,}[mk]', x).group() if re.search('[0-9\\.]{1,}[mk]', x) else 'unknown' if x == '?' else 0)\n",
-    "df['Fee'] = df['Fee'].apply(lambda x: float(str(x)[:-1])*10e6 if str(x)[-1] == 'm' else float(str(x)[:-1])*10e3 if str(x)[-1] == 'k' else 'unknown' if str(x) == 'unknown' else 0)"
+    "df['Fee'] = df['Fee'].apply(lambda x: int(float(str(x)[:-1])*10e6) if str(x)[-1] == 'm' else int(float(str(x)[:-1])*10e3) if str(x)[-1] == 'k' else 'unknown' if str(x) == 'unknown' else 0)\n",
+    "df['Fee'] = df['Fee'].apply(lambda x: format(x, ',d') if type(x) == int else x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -466,8 +469,8 @@
        "      <td>Blackburn Rovers</td>\n",
        "      <td>Luton Town</td>\n",
        "      <td>2023-08-03</td>\n",
-       "      <td>22000000.0</td>\n",
-       "      <td>29000000.0</td>\n",
+       "      <td>22,000,000</td>\n",
+       "      <td>29,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -479,8 +482,8 @@
        "      <td>UD Almería</td>\n",
        "      <td>Grêmio Foot-Ball Porto Alegrense</td>\n",
        "      <td>2023-08-03</td>\n",
-       "      <td>30000000.0</td>\n",
-       "      <td>15000000.0</td>\n",
+       "      <td>30,000,000</td>\n",
+       "      <td>15,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -492,7 +495,7 @@
        "      <td>Atalanta BC</td>\n",
        "      <td>AC Reggiana 1919</td>\n",
        "      <td>2023-08-03</td>\n",
-       "      <td>7000000.0</td>\n",
+       "      <td>7,000,000</td>\n",
        "      <td>unknown</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
@@ -505,8 +508,8 @@
        "      <td>CA Rosario Central</td>\n",
        "      <td>ACF Fiorentina</td>\n",
        "      <td>2023-08-03</td>\n",
-       "      <td>30000000.0</td>\n",
-       "      <td>40000000.0</td>\n",
+       "      <td>30,000,000</td>\n",
+       "      <td>40,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -518,8 +521,8 @@
        "      <td>Eintracht Frankfurt</td>\n",
        "      <td>Ajax Amsterdam</td>\n",
        "      <td>2023-08-03</td>\n",
-       "      <td>7500000.0</td>\n",
-       "      <td>80000000.0</td>\n",
+       "      <td>7,500,000</td>\n",
+       "      <td>80,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -544,8 +547,8 @@
        "      <td>Eintracht Frankfurt</td>\n",
        "      <td>1.FC Kaiserslautern</td>\n",
        "      <td>2023-07-25</td>\n",
-       "      <td>10000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
+       "      <td>10,000,000</td>\n",
+       "      <td>10,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -557,8 +560,8 @@
        "      <td>Bayern Munich</td>\n",
        "      <td>VfB Stuttgart</td>\n",
        "      <td>2023-07-25</td>\n",
-       "      <td>80000000.0</td>\n",
-       "      <td>10000000.0</td>\n",
+       "      <td>80,000,000</td>\n",
+       "      <td>10,000,000</td>\n",
        "      <td>loan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -570,8 +573,8 @@
        "      <td>Fenerbahce</td>\n",
        "      <td>TSG 1899 Hoffenheim</td>\n",
        "      <td>2023-07-24</td>\n",
-       "      <td>140000000.0</td>\n",
-       "      <td>123000000.0</td>\n",
+       "      <td>140,000,000</td>\n",
+       "      <td>123,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -583,8 +586,8 @@
        "      <td>Bayern Munich</td>\n",
        "      <td>Borussia Dortmund</td>\n",
        "      <td>2023-07-24</td>\n",
-       "      <td>200000000.0</td>\n",
-       "      <td>190000000.0</td>\n",
+       "      <td>200,000,000</td>\n",
+       "      <td>190,000,000</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -596,7 +599,7 @@
        "      <td>TSG 1899 Hoffenheim</td>\n",
        "      <td>Ceará Sporting Club</td>\n",
        "      <td>2023-07-22</td>\n",
-       "      <td>12000000.0</td>\n",
+       "      <td>12,000,000</td>\n",
        "      <td>0</td>\n",
        "      <td>transfer</td>\n",
        "    </tr>\n",
@@ -619,36 +622,36 @@
        "91  Marcel Sabitzer  Central Midfield   29    Austria        Bayern Munich   \n",
        "93    Lucas Ribeiro       Centre-Back   24     Brazil  TSG 1899 Hoffenheim   \n",
        "\n",
-       "                              Joined Transfer Date  Market Value (€)  \\\n",
-       "0                         Luton Town    2023-08-03        22000000.0   \n",
-       "25  Grêmio Foot-Ball Porto Alegrense    2023-08-03        30000000.0   \n",
-       "50                  AC Reggiana 1919    2023-08-03         7000000.0   \n",
-       "49                    ACF Fiorentina    2023-08-03        30000000.0   \n",
-       "72                    Ajax Amsterdam    2023-08-03         7500000.0   \n",
-       "..                               ...           ...               ...   \n",
-       "89               1.FC Kaiserslautern    2023-07-25        10000000.0   \n",
-       "90                     VfB Stuttgart    2023-07-25        80000000.0   \n",
-       "92               TSG 1899 Hoffenheim    2023-07-24       140000000.0   \n",
-       "91                 Borussia Dortmund    2023-07-24       200000000.0   \n",
-       "93               Ceará Sporting Club    2023-07-22        12000000.0   \n",
+       "                              Joined Transfer Date Market Value (€)  \\\n",
+       "0                         Luton Town    2023-08-03       22,000,000   \n",
+       "25  Grêmio Foot-Ball Porto Alegrense    2023-08-03       30,000,000   \n",
+       "50                  AC Reggiana 1919    2023-08-03        7,000,000   \n",
+       "49                    ACF Fiorentina    2023-08-03       30,000,000   \n",
+       "72                    Ajax Amsterdam    2023-08-03        7,500,000   \n",
+       "..                               ...           ...              ...   \n",
+       "89               1.FC Kaiserslautern    2023-07-25       10,000,000   \n",
+       "90                     VfB Stuttgart    2023-07-25       80,000,000   \n",
+       "92               TSG 1899 Hoffenheim    2023-07-24      140,000,000   \n",
+       "91                 Borussia Dortmund    2023-07-24      200,000,000   \n",
+       "93               Ceará Sporting Club    2023-07-22       12,000,000   \n",
        "\n",
        "        Fee (€) Transfer Type  \n",
-       "0    29000000.0      transfer  \n",
-       "25   15000000.0      transfer  \n",
+       "0    29,000,000      transfer  \n",
+       "25   15,000,000      transfer  \n",
        "50      unknown      transfer  \n",
-       "49   40000000.0      transfer  \n",
-       "72   80000000.0      transfer  \n",
+       "49   40,000,000      transfer  \n",
+       "72   80,000,000      transfer  \n",
        "..          ...           ...  \n",
-       "89   10000000.0      transfer  \n",
-       "90   10000000.0          loan  \n",
-       "92  123000000.0      transfer  \n",
-       "91  190000000.0      transfer  \n",
+       "89   10,000,000      transfer  \n",
+       "90   10,000,000          loan  \n",
+       "92  123,000,000      transfer  \n",
+       "91  190,000,000      transfer  \n",
        "93            0      transfer  \n",
        "\n",
        "[114 rows x 10 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
